--- a/css/styles_about.css
+++ b/css/styles_about.css
@@ -69,10 +69,11 @@ nav ul {
 }
 
 nav ul li a {
-    padding: 5px;
+    padding: 15px;
     color: white;
     text-decoration: none;
     display:block;
+	border: 10px;
 }
 
 nav ul li a:hover {
