--- a/css/styles_services.css
+++ b/css/styles_services.css
@@ -73,6 +73,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     display:block;
+	border: 10px;
 }
 
 nav ul li a:hover {
@@ -126,6 +127,11 @@ h3 {
     text-align: center;
     padding-bottom: 0.5em;
     padding-top: 0.5em;
+}
+
+table.prices {
+	padding: 15px;
+	margin: 0px auto;
 }
 
 footer {
